--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ largeArticle {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #002FA7;
+  font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
+  font-size: 20px;
+  font-style: normal;
+  font-variant: normal;
 }
-
 
 h1 {
 	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
@@ -33,11 +36,11 @@ h1 {
 }
 h2 {
 	font-family: "Lucida Console", "Lucida Sans Typewriter", monaco, "Bitstream Vera Sans Mono", monospace;
-	font-size: 20px;
+	font-size: 25px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 500;
-	line-height: 15.4px;
+	line-height: 20px;
   font-weight: bold;
   color: #002FA7;
 }
@@ -65,6 +68,7 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  padding-top: 20px;
 }
 
 articlesSub{
@@ -248,20 +252,23 @@ html,body{
   border-radius:3px;
   text-decoration:none;
   display:inline-block;
-  margin:20px;
+  margin:5px;
   padding:5px 10px;
   font-weight:600;
   font-size:1.2em;
   box-sizing:border-box
 }
-.sides, .info{
+.sides{
   flex: 0 0 auto;
-  width:50%
+  width:50%;
+  display: flex;
+  flex-direction: row;:
 }
 .info{
   width:100%;
   text-align:center;
   text-shadow:0 2px 3px rgba(0,0,0,0.2)
+padding-top:20px;
   margin-bottom:20px;
 }
 .author{
